# notion-books

./: .gitignore  Cargo.toml  config.example.kdl
src/: descriptions.rs  gbooks.rs  main.rs  notion.rs
