[package]
name = "notion-books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
knuffel = "1"
miette = { version = "3", features = ["fancy"] }
url = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
